# document-rag-poc

./: README.md  dockerfile  pyproject.toml
src/: document_processor.py  main.py
